--- a/src/Module 10/Automating Data Quality Checks in Data Pipelines/Ques_1.ipynb
+++ b/src/Module 10/Automating Data Quality Checks in Data Pipelines/Ques_1.ipynb
@@ -24,17 +24,120 @@
    "source": [
     "# Write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1577811175.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip install apache-airflow\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install apache-airflow\n",
+    "pip install great_expectations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'airflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mairflow\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DAG\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mairflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moperators\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpython_operator\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PythonOperator\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime, timedelta\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'airflow'"
+     ]
+    }
+   ],
+   "source": [
+    "from airflow import DAG\n",
+    "from airflow.operators.python_operator import PythonOperator\n",
+    "from datetime import datetime, timedelta\n",
+    "import great_expectations as ge\n",
+    "from great_expectations.core.batch import BatchRequest\n",
+    "\n",
+    "# Define default args for the DAG\n",
+    "default_args = {\n",
+    "    'owner': 'airflow',\n",
+    "    'depends_on_past': False,\n",
+    "    'start_date': datetime(2025, 5, 29),\n",
+    "    'retries': 1,\n",
+    "    'retry_delay': timedelta(minutes=5),\n",
+    "}\n",
+    "\n",
+    "# Define the DAG\n",
+    "dag = DAG(\n",
+    "    'great_expectations_data_quality',\n",
+    "    default_args=default_args,\n",
+    "    description='Run Great Expectations data validation',\n",
+    "    schedule_interval='@daily',  # adjust schedule as needed\n",
+    "    catchup=False,\n",
+    ")\n",
+    "\n",
+    "def run_ge_validation():\n",
+    "    # Initialize a Data Context (make sure your GE config is set up properly)\n",
+    "    context = ge.data_context.DataContext()\n",
+    "\n",
+    "    # Create a BatchRequest to specify which data to validate\n",
+    "    # Example for a pandas datasource or filesystem datasource\n",
+    "    batch_request = BatchRequest(\n",
+    "        datasource_name=\"your_datasource_name\",\n",
+    "        data_connector_name=\"your_data_connector_name\",\n",
+    "        data_asset_name=\"your_data_asset_name\",\n",
+    "        # Optionally specify batch identifiers, e.g. {\"date\": \"2025-05-29\"}\n",
+    "        batch_identifiers={\"default_identifier_name\": \"default_identifier\"},\n",
+    "    )\n",
+    "\n",
+    "    # Run validation with the expectation suite named 'your_expectation_suite_name'\n",
+    "    result = context.run_validation_operator(\n",
+    "        \"action_list_operator\",  # default validation operator\n",
+    "        assets_to_validate=[batch_request],\n",
+    "        run_name=\"airflow_run_\" + datetime.now().strftime(\"%Y%m%d-%H%M%S\"),\n",
+    "    )\n",
+    "\n",
+    "    if not result[\"success\"]:\n",
+    "        raise ValueError(\"Data validation failed\")\n",
+    "\n",
+    "# Create the Airflow task\n",
+    "run_ge = PythonOperator(\n",
+    "    task_id='run_great_expectations',\n",
+    "    python_callable=run_ge_validation,\n",
+    "    dag=dag,\n",
+    ")\n",
+    "\n",
+    "run_ge\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
