--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_2.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_2.ipynb
@@ -23,50 +23,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'sample_unstructured_text.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Step 1: Load and analyze unstructured text\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msample_unstructured_text.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m      5\u001b[0m     text \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSample of unstructured text:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, text[:\u001b[38;5;241m500\u001b[39m])  \u001b[38;5;66;03m# Show the first 500 characters\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'sample_unstructured_text.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: File 'sample_unstructured_text.txt' does not exist.\n"
      ]
     }
    ],
    "source": [
     "import re\n",
+    "import os\n",
     "\n",
-    "# Step 1: Load and analyze unstructured text\n",
-    "with open('sample_unstructured_text.txt', 'r', encoding='utf-8') as file:\n",
-    "    text = file.read()\n",
+    "def read_file(file_path):\n",
+    "    \"\"\"Reads content from a file with error handling.\"\"\"\n",
+    "    if not os.path.exists(file_path):\n",
+    "        raise FileNotFoundError(f\"File '{file_path}' does not exist.\")\n",
+    "    \n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        content = file.read()\n",
+    "        if not content.strip():\n",
+    "            raise ValueError(\"File is empty.\")\n",
+    "        return content\n",
     "\n",
-    "print(\"Sample of unstructured text:\\n\", text[:500])  # Show the first 500 characters\n",
+    "def extract_emails(text):\n",
+    "    return re.findall(r'\\b[\\w.-]+?@\\w+?\\.\\w+?\\b', text)\n",
     "\n",
-    "# Step 2: Extract information using regex\n",
+    "def extract_phone_numbers(text):\n",
+    "    return re.findall(r'\\b(?:\\+?\\d{1,2}\\s?)?(?:\\(?\\d{3}\\)?[-.\\s]?)?\\d{3}[-.\\s]?\\d{4}\\b', text)\n",
     "\n",
-    "# Extract email addresses\n",
-    "emails = re.findall(r'\\b[\\w.-]+?@\\w+?\\.\\w+?\\b', text)\n",
+    "def extract_dates(text):\n",
+    "    return re.findall(r'\\b(?:\\d{1,2}[-/]\\d{1,2}[-/]\\d{2,4}|(?:Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)[a-z]*\\s\\d{1,2},\\s\\d{4})\\b', text)\n",
     "\n",
-    "# Extract phone numbers (format: (123) 456-7890, 123-456-7890, etc.)\n",
-    "phones = re.findall(r'\\b(?:\\+?\\d{1,2}\\s?)?(?:\\(?\\d{3}\\)?[-.\\s]?)?\\d{3}[-.\\s]?\\d{4}\\b', text)\n",
+    "def extract_names(text):\n",
+    "    return re.findall(r'\\b[A-Z][a-z]+\\s[A-Z][a-z]+\\b', text)\n",
     "\n",
-    "# Extract dates (common formats: dd/mm/yyyy, mm-dd-yyyy, Month dd, yyyy)\n",
-    "dates = re.findall(r'\\b(?:\\d{1,2}[-/]\\d{1,2}[-/]\\d{2,4}|(?:Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)[a-z]*\\s\\d{1,2},\\s\\d{4})\\b', text)\n",
+    "def main(file_path):\n",
+    "    try:\n",
+    "        text = read_file(file_path)\n",
+    "        print(\"Emails:\", extract_emails(text))\n",
+    "        print(\"Phone Numbers:\", extract_phone_numbers(text))\n",
+    "        print(\"Dates:\", extract_dates(text))\n",
+    "        print(\"Names:\", extract_names(text))\n",
+    "    except Exception as e:\n",
+    "        print(\"Error:\", e)\n",
     "\n",
-    "# Extract names (very basic pattern assuming names are capitalized words)\n",
-    "names = re.findall(r'\\b[A-Z][a-z]+\\s[A-Z][a-z]+\\b', text)\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    main('sample_unstructured_text.txt')  # Replace with your file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: ipykernel_launcher.py [-h] [-v] [-q] [--locals] [-f] [-c] [-b]\n",
+      "                             [-k TESTNAMEPATTERNS]\n",
+      "                             [tests ...]\n",
+      "ipykernel_launcher.py: error: argument -f/--failfast: ignored explicit argument '/home/vscode/.local/share/jupyter/runtime/kernel-v35cc5f0b4f308cf5185c4048ae41d822ff181db2d.json'\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vscode/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import unittest\n",
     "\n",
-    "# Show results\n",
-    "print(\"\\nExtracted Emails:\", emails)\n",
-    "print(\"\\nExtracted Phone Numbers:\", phones)\n",
-    "print(\"\\nExtracted Dates:\", dates)\n",
-    "print(\"\\nExtracted Names (basic):\", names)\n"
+    "class TestRegexExtractors(unittest.TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.text = \"\"\"\n",
+    "        John Doe, born on 12/05/1990, contacted via john.doe@example.com or (123) 456-7890.\n",
+    "        He submitted the application on March 10, 2024. Reach out to jane_smith@work.net or +91 987-654-3210.\n",
+    "        \"\"\"\n",
+    "\n",
+    "    def test_email_extraction(self):\n",
+    "        self.assertEqual(\n",
+    "            extract_emails(self.text),\n",
+    "            ['john.doe@example.com', 'jane_smith@work.net']\n",
+    "        )\n",
+    "\n",
+    "    def test_phone_number_extraction(self):\n",
+    "        self.assertIn('(123) 456-7890', extract_phone_numbers(self.text))\n",
+    "        self.assertIn('+91 987-654-3210', extract_phone_numbers(self.text))\n",
+    "\n",
+    "    def test_date_extraction(self):\n",
+    "        self.assertIn('12/05/1990', extract_dates(self.text))\n",
+    "        self.assertIn('March 10, 2024', extract_dates(self.text))\n",
+    "\n",
+    "    def test_name_extraction(self):\n",
+    "        self.assertIn('John Doe', extract_names(self.text))\n",
+    "        self.assertIn('Jane Smith', extract_names(self.text))  # Edge: try to test lowercase/variants\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main()\n"
    ]
   }
  ],
