--- a/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_5.ipynb
+++ b/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_5.ipynb
@@ -32,7 +32,7 @@
       "8   9.0  19.0  29.0\n",
       "9  10.0  20.0   NaN\n",
       "\n",
-      "Missing values per column:\n",
+      "Missing values Per Column:\n",
       "A    1\n",
       "B    1\n",
       "C    1\n",
@@ -73,7 +73,7 @@
     "print(\"Original dataframe with missing values:\")\n",
     "print(df)\n",
     "\n",
-    "print(\"\\nMissing values per column:\")\n",
+    "print(\"\\nMissing values Per Column:\")\n",
     "print(df.isnull().sum())\n",
     "\n",
     "# Handle missing values by imputing the median\n",
